# dental-scraper

./: .env.example  .gitignore  README.md  pyproject.toml  scrapy.cfg
dental_scraper/: items.py  loaders.py  middlewares.py  settings.py
dental_scraper/mappings/: dental_cremer.yaml  dental_speed.yaml
dental_scraper/matching/: __init__.py  engine.py  index.py  models.py  runner.py  similarity.py
dental_scraper/normalization/: __init__.py  brands.py  categories.py  supplier_mappings.py  text.py  units.py
dental_scraper/pipelines/: cleaner.py  exporter.py  normalizer.py  postgres.py
dental_scraper/spiders/: base.py  dental_cremer.py  dental_cremer_api.py  dental_speed.py
docs/: dental_speed_selectors.md  scrapy-best-practices.md
output/: dental_cremer_20251223_204314.json  dental_speed_20251223_134421.json  dental_speed_20251223_204306.json  suppliers_metadata.json
scripts/: cleanup_playwright.sh
tests/: conftest.py
tests/test_normalizer/: test_brands.py  test_text.py  test_units.py
